Add PhysicalWebShareActivity

This adds the PhysicalWebShareActivity, a empty-activity that will call
the PhysicalWebBroadcastService. It is invoked in the share intent
picker with the Physical Web logo, similiarly to the PrintShareActivity.

BUG=685856

Review-Url: https://codereview.chromium.org/2695163002
Cr-Commit-Position: refs/heads/master@{#451411}

Former-commit-id: bb3232b44160a665e67c55d9c43b74794c963279