chrome/browser/android/chrome_feature_list.h
@@ -32,6 +32,7 @@ extern const base::Feature kNTPOfflinePagesFeature;
 extern const base::Feature NTPShowGoogleGInOmniboxFeature;
 extern const base::Feature kNTPSuggestionsStandaloneUIFeature;
 extern const base::Feature kPhysicalWebFeature;
+extern const base::Feature kPhysicalWebSharing;
 extern const base::Feature kSpecialLocaleFeature;
 extern const base::Feature kSpecialLocaleWrapper;
 extern const base::Feature kTabsInCBD;
